test/integration/good/overloading/num_args.stan
functions {
   real foo(real one){
     return 1.0;
   }

   real foo(real one, real two){
     return 2.0;
   }
}
